feat: Allow to mention roles of a selected space using suggester in Task Comments - MEED-3117 - Meeds-io/MIPs#109 (#337)
This change will allow to mention roles of a space belonging to a Task
Project using suggester component. A notification will be sent as well
to all users having this role by reusing the appropriate Notification
plugin.